add secure login with JWT and role-based access control

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=Ranchu@2002
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# JWT Configuration
+jwt.secret=jobtracker_super_secure_secret_key_256_bits_long
+jwt.expiration-ms=86400000
