implement job application management with CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.show-sql=true
 # JWT Configuration
 jwt.secret=jobtracker_super_secure_secret_key_256_bits_long
 jwt.expiration-ms=86400000
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.ats=DEBUG
