implement application status tracking with auto NO_RESPONSE logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ server.error.include-stacktrace=always
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.ats=DEBUG
+
+# Auto NO_RESPONSE after X days
+application.no-response.days=7
+
+# Enable scheduler
+spring.task.scheduling.enabled=true
+
