--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=application-tracking-system
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ats_db
-spring.datasource.username=root
-spring.datasource.password=Ranchu@2002
+s
+
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
