--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=application-tracking-system
 
-//spring.datasource.url=jdbc:mysql://localhost:3306/ats_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/ats_db
 
-//spring.datasource.username=${DB_USERNAME}
-//spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 server.port=8080
 
